--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,16 @@
   ],
   "require": {
     "php": "^7.4",
-    "rem42/scraper": "2.*",
+    "rem42/scraper": "v2.x-dev",
     "symfony/dom-crawler": "^5.0",
     "symfony/css-selector": "^5.0"
   },
   "require-dev": {
+    "rector/rector": "^0.7.16",
     "rem42/php-cs-fixer-config": "^1.0",
-    "phpstan/phpstan": "0.12.*"
+    "phpstan/phpstan": "0.12.*",
+    "phpunit/phpunit": "^9",
+    "php-coveralls/php-coveralls": "^2.2"
   },
   "autoload": {
     "psr-0": {
@@ -27,12 +30,23 @@
       "Scraper\\ScraperAvisVerifies\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-0": {
+      "Scraper\\ScraperAvisVerifies\\Tests\\": "tests/"
+    },
+    "psr-4": {
+      "Scraper\\ScraperAvisVerifies\\Tests\\": "tests/"
+    }
+  },
   "config": {
     "bin-dir": "bin/"
   },
   "scripts": {
     "static-analysis": "./bin/phpstan analyse src --level=max --no-progress -vvv",
     "code-style-check": "./bin/php-cs-fixer fix --dry-run --verbose",
-    "code-style-fix": "./bin/php-cs-fixer fix"
+    "code-style-fix": "./bin/php-cs-fixer fix",
+    "rector-check": "./bin/rector process --dry-run",
+    "rector-fix": "./bin/rector process",
+    "unit-test": "./bin/phpunit"
   }
 }
